# sopel-tld

./: NEWS  README.md  pyproject.toml
sopel_tld/: plugin.py
