[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_tld", "sopel_tld.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-tld"
version = "0.1.1"
description = "Top-level domain (TLD) info plugin for Sopel IRC bots."

authors = [
  { name="Michael Yanovich" },
  { name="dgw", email="dgw@technobabbl.es" },
]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = "EFL-2.0"
license-files = ["COPYING"]
dynamic = ["readme"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
  "sopel>=8.0",
  "requests",  # let Sopel constrain the version
  "pytz",  # let Sopel constrain the version
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-tld"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-tld/issues"

[project.entry-points."sopel.plugins"]
"tld" = "sopel_tld.plugin"
